Fixed uneven grid on certain screen heights

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -334,7 +334,7 @@ input[type=text]:focus {
     
 
     @media(min-height: 600px) {
-        height: 29.9vh;
+        height: 29.78vh;
     }
 
     @media(max-width: 576px) {
